--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <h1>Duncan's Fans and Blowups</h1>
+        <h1>Duncan's Fans and Blowups!</h1>
         <figure class="hero">
             <img src="duncan.jpg" alt="Duncan" />
         </figure>
